fix weird public url issue

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Pankosmia"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="./public/manifest.json" />
      <title>Pankosmia</title>
   </head>
   <body>
